# advent_gl

./: main.cpp
1/: CMakeLists.txt  main.cpp
1/glad/include/glad/: glad.h
1/glad/src/: glad.c
2/glad/: CMakeLists.txt
